# sveltekit-rust-template

./: README.md  current_project_name.txt  rename-project.sh  setup-project.sh  sveltekit-rust-auth.code-workspace
backend/: .env.local  Cargo.toml
backend/src/: handlers.rs  main.rs
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/lib/: api.ts
frontend/src/routes/: +page.svelte  +page.ts
